# fastapiBlogBackend

./: .dockerignore  .env.example  .gitignore  Dockerfile  compose.yaml  pyproject.toml
app/: main.py
app/core/: config.py  exceptions.py  security.py  seed.py
app/features/auth/: dependencies.py  router.py  schemas.py  service.py
app/features/blogs/: model.py  router.py  schemas.py  service.py
app/features/tags/: model.py  router.py  schemas.py  service.py
app/features/users/: model.py  router.py  schemas.py  service.py
app/migrations/: env.py
app/migrations/versions/: 1225805a2787_initial_tables.py
docs/: 01-dockerfile.md  01-dockerfile.pptx  02-compose.md  02-compose.pptx
