[project]
name = "fastapiproject"
version = "0.1.0"
description = "Blog API with FastAPI + PostgreSQL + JWT authentication"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "uvicorn>=0.39.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.18",
    "email-validator>=2.0.0",
]
